API changes, manager changes
