# infostradka-server/swagger_server/controllers/manager_controller.py
@@ -9,7 +9,7 @@ from flask import render_template
 
 
 def get_manager():  # noqa: E501
-    """Returns index
+    """Returns display
 
      # noqa: E501
 
@@ -17,3 +17,31 @@ def get_manager():  # noqa: E501
     :rtype: List[Rotator]
     """
     return render_template("manager.html")
+
+
+def get_displays_list():
+    pass
+
+
+def get_displays_content():
+    return render_template("main_content.html", elements=[{"address": "http://wp.pl"}, {"address": "http://onet.pl"}])
+
+
+def update_displays_content():
+    pass
+
+
+def get_right_content():
+    pass
+
+
+def update_right_content():
+    pass
+
+
+def get_news_bar():
+    pass
+
+
+def update_news_bar():
+    pass
